client/main.css
html, body {
    overflow: hidden;
}

.nav-element-text {
    padding: 0px 8px;
    color: #fff;
}

.button .icon:last-child, .button .tag:last-child {
    margin-left: 0px;
    margin-right: -2px;
}

.button .icon:first-child, .button .tag:first-child {
    margin-left: -2px;
    margin-right: 0px;
}

.nav-button-icon {
    font-size: 1pc;
    line-height: 30px;
    top: 0;
    left: 0;
    font-weight: 400;
}

.nav-search-icon {
    cursor: pointer;
    position: absolute;
    font-size: 1pc;
    right: 0;
    top: 0;
}

.nav-button {
    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 0, rgba(255, 255, 255, 0.2) 100%);
    font-weight: 700;
    border: none;
    line-height: 30px;
    height: 30px;
    margin-right: 8px;
    padding: 0;
}

.nav {
    background: rgba(0, 0, 0, 0.15);
    min-height: 30px;
    padding: 5px;
}

.nav-item {
    padding: 0px;
}

.nav-item a {
    color: #f3f3f3;
}

.nav-logo-container {
    background-image: url(../images/header-logo.png);
    background-repeat: no-repeat;
    background-size: 5pc 30px;
    right: 0;
    top: 0;
}

.nav-menu {
    padding-right: 0px;
}

.nav-logo {
    display: block;
}

.nav-logo, .nav-logo-container {
    height: 30px;
    width: 5pc;
    color: #fff;
}

.input {
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 3px;
    border: none;
    color: rgba(255, 255, 255, 0.5);
    font-size: 13px;
    height: 30px;
    margin: 0;
    min-height: 30px;
    padding-right: 30px;
    padding-left: 8px;
    line-height: 19px;
    width: 180px;
}

.board-header {
    height: auto;
    overflow: hidden;
    padding: 8px 4px 8px 8px;
    position: relative;
}

.board-header-btn-name {
    cursor: default;
    font-size: 18px;
    font-weight: 700;
    line-height: 30px;
    padding-left: 4px;
    text-decoration: none;
}

.board-header-btn {
    border-radius: 3px;
    color: #f6f6f6;
    cursor: default;
    float: left;
    font-size: 9pt;
    height: 30px;
    line-height: 30px;
    margin: 0 4px 0 0;
    overflow: hidden;
    position: relative;
    text-decoration: none;
}

.board-header-btn-text {
    padding-right: 8px;
}

.board-header-btn-icon {
    background-clip: content-box;
    background-origin: content-box;
    color: #f6f6f6;
    padding: 6px;
    position: absolute;
    top: 0;
    left: 0;
}

#board {
    user-select: none;
    white-space: nowrap;
    height: 100%;
    width: 100%;
    display: inline-flex;
    margin-bottom: 10px;
    overflow-x: auto;
    overflow-y: hidden;
    padding-bottom: 10px;
    padding-right: 20px;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.list-wrapper.mod-add.is-idle {
    background: rgba(0,0,0,.12);
    cursor: pointer;
    color: #fff;
}


.list-wrapper.mod-add {
    height: 30px;
    padding: 4px;
    border-radius: 3px;
}

.list-wrapper:last-child {
    margin-right: 5px;
}

.list-wrapper.mod-add.is-idle .list-name-input {
    background: 0 0;
    border-color: transparent;
    box-shadow: none;
    cursor: pointer;
    margin: 0;
}

.list-card {
    background-color: #fff;
    border-bottom: 1px solid #ccc;
    border-radius: 3px;
    cursor: pointer;
    margin-bottom: 6px;
    max-width: 300px;
    min-height: 20px;
    position: relative;
}

.list-cards {
    -webkit-box-flex: 1;
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    overflow-y: auto;
    overflow-x: hidden;
    margin: 0 4px;
    padding: 0 4px;
    z-index: 1;
    min-height: 0;
}

.list-card-details {
    overflow: hidden;
    padding: 6px 6px 2px 8px;
    position: relative;
}

.div-header-icon {
    display: inline-block;
    float: right;
}

.list-card-title {
    clear: both;
    display: block;
    font-weight: 400;
    margin: 0 0 4px;
    overflow: hidden;
    text-decoration: none;
    word-wrap: break-word;
}

.list-card a, .sticker-select-upload:hover .sticker-select-upload-icon {
    color: #4d4d4d;
}

.list-wrapper:first-child {
    margin-left: 10px;
}

.list-wrapper {
    width: 270px;
    margin: 0 5px;
    height: 100%;
    box-sizing: border-box;
    display: inline-block;
    vertical-align: top;
    white-space: nowrap;
    float:left;
}

.list {
    background: #e2e4e6;
    border-radius: 3px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    max-height: 100%;
    position: relative;
    white-space: normal;
}

.list-header {
    -webkit-box-flex: 0;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    padding: 8px 10px;
    position: relative;
    min-height: 18px;
}

.list-name {
    background: 0 0;
    border: none;
    border-radius: 3px;
    box-shadow: none;
    font-weight: 700;
    margin: -3px -5px;
    min-height: 18px;
    padding: 3px 5px;
    resize: none;
    overflow: hidden;
    word-wrap: break-word;
    height: 24px;
    color: #4d4d4d;
}

.card-composer {
    padding-bottom: 8px;
    overflow: hidden;
    display: none;
}

textarea {
    background-color: #e2e4e6;
    border: 1px solid #cdd2d4;
    border-radius: 3px;
    display: block;
    margin-bottom: 9pt;
    min-height: 34px;
    padding: 7px;
}

.nav-logo-container {
    background-image: url(/images/header_logo.png);
    background-repeat: no-repeat;
    background-size: 5pc 30px;
    right: 0;
    top: 0;
}

.nav-logo {
    display: block;
}

.nav-logo, .nav-logo-container {
    height: 30px;
    width: 5pc;
    color: #fff;
}

.list-header-num-cards {
    color: #8c8c8c;
    margin: 0;
    display: inline-block;
}

.open-card-composer {
    border-radius: 0 0 3px 3px;
    color: #8c8c8c;
    display: block;
    padding: 8px 10px;
    position: relative;
}

textarea {
    width: 100%;
}

textarea.list-card-composer-textarea, textarea.list-card-composer-textarea:focus {
    background: 0 0;
    border: none;
    box-shadow: none;
    margin-bottom: 4px;
    max-height: 162px;
    min-height: 54px;
    padding: 0;
    overflow: hidden;
    word-wrap: break-word;
    resize: none;
    height: 54px;
}

.cc-controls-section {
    float: left;
}

.button.is-success {
    background: -webkit-linear-gradient(top, #61BD4F 0, #5AAC44 100%);
    background: linear-gradient(to bottom, #61BD4F 0, #5AAC44 100%);
    box-shadow: 0 1px 0 #3F6F21;
    color: #fff;
}

button.mod-compact {
    min-height: 30px;
    padding: 4px 1pc;
    vertical-align: top;
    display: inline-block;
}

.page-content {
    background: #0079bf;
    font: 14px "Helvetica Neue",Arial,Helvetica,sans-serif;
    height: 675px;
    width: 100%;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.icon-lg.light {
    color: #fff;
    text-decoration: none;
}

.icon-lg {
    height: 30px;
    font-size: 20px;
    line-height: 30px;
    width: 30px;
    display: inline-block;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-style: normal;
    font-weight: 400;
    text-decoration: none;
    color: #999;
}

.dark-hover {
    color: #4d4d4d;
    text-decoration: none;
}

